2010-09-04  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11979]
	* iconvdata/gconv-modules: Remove EBCDIC-CP-AR2 alias from
	IBM-930, IBM-933, IBM-935, IBM-937, and IBM-939.

2010-09-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/add_n.S: Update from GMP 5.0.1.
	* sysdeps/x86_64/addmul_1.S: Likewise.
	* sysdeps/x86_64/lshift.S: Likewise.
	* sysdeps/x86_64/mul_1.S: Likewise.
	* sysdeps/x86_64/rshift.S: Likewise.
	* sysdeps/x86_64/sub_n.S: Likewise.
	* sysdeps/x86_64/submul_1.S: Likewise.

2010-09-01  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	This aligns bits/sched.h onto sysdeps/unix/sysv/linux/bits/sched.h:
	Define __sched_param instead of SCHED_* and sched_param when
	<bits/sched.h> is included with __need_schedparam defined.
	* bits/sched.h [__need_schedparam]
	(SCHED_OTHER, SCHED_FIFO, SCHED_RR, sched_param): Do not define.
	[!__defined_schedparam && (__need_schedparam || _SCHED_H)]
	(__defined_schedparam): Define to 1.
	(__sched_param): New structure, identical to sched_param.
	(__need_schedparam): Undefine.

2010-08-31  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/sparc/sys/epoll.h (epoll_create2): Delete.
	(epoll_create1): Declare.

	* sysdeps/unix/sysv/linux/x86_64/sys/epoll.h: Fix typo.

2010-08-31  Andreas Schwab  <schwab@redhat.com>

	[BZ #7066]
	* stdlib/strtod_l.c (____STRTOF_INTERNAL): Fix array overflow when
	shifting retval into place.

2010-09-01  Ulrich Drepper  <drepper@redhat.com>

	* nis/rpcsvc/nis.h: Update copyright notice.
	* nis/rpcsvc/nis.x: Likewise.
	* nis/rpcsvc/nis_callback.h: Likewise.
	* nis/rpcsvc/nis_callback.x: Likewise.
	* nis/rpcsvc/nis_object.x: Likewise.
	* nis/rpcsvc/nis_tags.h: Likewise.
	* nis/rpcsvc/yp.h: Likewise.
	* nis/rpcsvc/yp.x: Likewise.
	* nis/rpcsvc/ypupd.h: Likewise.
	* nis/yp_xdr.c: Likewise.
	* nis/ypupdate_xdr.c: Likewise.

	* sunrpc/pm_getport.c (__libc_rpc_getport): New function.  This is
	mainly the body of pmap_getport.  Add parameters to specify timeouts.