@@ -1,3 +1,14 @@
+2010-09-05  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* debug/vdprintf_chk.c (__vdprintf_chk): Remove undefined
+	operation.
+	* libio/iofdopen.c (_IO_new_fdopen): Likewise.
+	* libio/iofopncook.c (_IO_cookie_init): Likewise.
+	* libio/iovdprintf.c (_IO_vdprintf): Likewise.
+	* libio/oldiofdopen.c (_IO_old_fdopen): Likewise.
+	* sysdeps/powerpc/powerpc64/dl-machine.h (elf_machine_rela):
+	Likewise.
+
 2010-09-04  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #11979]
